build/js/components/requirejs/tests/error/plug.js
define({load:function(e,t,n,r){if(e==="broken"){var i=new Error("broken");i.plugMessage=e,n.error(i)}else n(e)}});